--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,19 +8,19 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - ${PORT:-8001}:80
-    # environment: # You can either use these properties OR an .env file. Do not use both!
-    #   APP_URL: "http://localhost:${PORT:-8000}"
-    #   DB_CONNECTION: mysql
-    #   DB_HOST: investbrain-mysql
-    #   DB_PORT: 3306
-    #   DB_DATABASE: investbrain
-    #   DB_USERNAME: investbrain
-    #   DB_PASSWORD: investbrain
-    #   SESSION_DRIVER: redis
-    #   QUEUE_CONNECTION: redis
-    #   CACHE_STORE: redis
-    #   REDIS_HOST: investbrain-redis
+      - 8000:80
+    environment: # You can either use these properties OR an .env file. Do not use both!
+      APP_URL: "http://localhost:8000"
+      DB_CONNECTION: mysql
+      DB_HOST: investbrain-mysql
+      DB_PORT: 3306
+      DB_DATABASE: investbrain
+      DB_USERNAME: investbrain
+      DB_PASSWORD: investbrain
+      SESSION_DRIVER: redis
+      QUEUE_CONNECTION: redis
+      CACHE_STORE: redis
+      REDIS_HOST: investbrain-redis
     volumes:
       - investbrain-storage:/var/app/storage # You can use a volume... 
       # - /path/to/storage:/var/app/storage:delegated # ...or you can use a path on host
@@ -44,11 +44,11 @@ services:
     image: mysql:8.0
     container_name: investbrain-mysql
     restart: unless-stopped
-    # environment:
-    #   MYSQL_DATABASE: ${DB_DATABASE:-investbrain}
-    #   MYSQL_USER: ${DB_USERNAME:-investbrain}
-    #   MYSQL_PASSWORD: ${DB_PASSWORD:-investbrain}
-    #   MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-investbrain}
+    environment:
+      MYSQL_DATABASE: ${DB_DATABASE:-investbrain}
+      MYSQL_USER: ${DB_USERNAME:-investbrain}
+      MYSQL_PASSWORD: ${DB_PASSWORD:-investbrain}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-investbrain}
     command: 
       - --cte-max-recursion-depth=25000
     volumes:
